--- CHANGELOG ---
--- PyFMI-FUTURE ---

--- PyFMI-2.18.0 ---
    * Added new class `DynamicDiagnosticsUtils` in `pyfmi.common.diagnostics` providing
      various utility functions for computing additional diagnostics variables derived
      from those stored during simulation with `dynamic_diagnostics = True`.
      These computations were previously hard-coded into `ResultDymolaBinary`.
    * Simulations using `ExplicitEuler` with `dynamic_diagnostics = True` now also
      store event indicator values.
    * Fixed the issue that `@Diagnostics.nbr_steps` was off by one.
    * Improved handling of linking with dynamic FMIL library.
    * Added new abstract base class `pyfmi.common.io.ResultReader` as base for
      `ResultCSVTextual`, `ResultStorageMemory`, `ResultDymolaTextual` and `ResultDymolaBinary`.
    * `pyfmi.common.io.ResultReader` new features:
        * Get all variable names via `get_variable_names`.
        * Get multiple trajectories via `get_trajectories`.
    * Deprecations: 
        * `pyfmi.common.io.ResultStorage`, use `pyfmi.common.io.ResultReader` instead.
        * `ResultDymolaTextual`, `ResultDymolaBinary`: `name` attribute for retrieving variable names, 
           use `get_variable_names` function instead.
        * `ResultCSVTextual`, `ResultStorageMemory`, `ResultDymolaTextual` and `ResultDymolaBinary`:
          `get_variable_data`, use `get_trajectory` instead.

--- PyFMI-2.17.4 ---
    * Fixed type annotation issue causing incompatibility with Python < 3.10.

--- PyFMI-2.17.3 ---
    * Fixed a race-condition in using ResultDymolaBinary.get_variables_data().

--- PyFMI-2.17.2 ---
    * Fixed an issue for dynamic_diagnostics, where failures to evaluate the Jacobian would result in invalid XML.
    * Fixed a bug introduced in PyFMI 2.17.1 that could when retreiving variables with very large value references in CoupledFMUModelME2.

--- PyFMI-2.17.1 ---
    * Fixed compilation issue with Cython 3.1.